DIAM-1254, DIAM-1242, DIAM-1243: Moved to Oro Migrations for bundles; Fixed CLI and web installers.

--- a/src/Diamante/EmailProcessingBundle/Resources/config/oro/bundles.yml
+++ b/src/Diamante/EmailProcessingBundle/Resources/config/oro/bundles.yml
@@ -1,2 +1,2 @@
 bundles:
-    - Diamante\EmailProcessingBundle\DiamanteEmailProcessingBundle
+    - { name: Diamante\EmailProcessingBundle\DiamanteEmailProcessingBundle, priority: 1002 }
