DIAM-1238: Fixed navigation items issue

--- a/src/Diamante/DistributionBundle/Resources/config/whitelist.yml
+++ b/src/Diamante/DistributionBundle/Resources/config/whitelist.yml
@@ -79,3 +79,4 @@ whitelist:
     - '^_imagine[a-z_]+'
     - '^oro_dashboard_[a-z_]+'
     - '^oro_tag_[a-z_]+'
+    - '^oro_api_(get|post|put|delete)_navigationitems'
