Styles for massage

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -41,7 +41,7 @@ twig:
 
 # Assetic Configuration
 assetic:
-    debug:                    false
+    debug:                    true
     use_controller:           false
     filters:
         cssrewrite: ~
