Corresponding massages if no tickets' with background image

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -41,7 +41,7 @@ twig:
 
 # Assetic Configuration
 assetic:
-    debug:                    true
+    debug:                     false
     use_controller:           false
     filters:
         cssrewrite: ~
