--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -24,7 +24,7 @@ monolog:
 
 oro_assetic:
     css_debug:      ~
-    css_debug_all:  true
+    css_debug_all:  false
 
 #swiftmailer:
 #    delivery_address: me@example.com
