--- a/src/Diamante/DeskBundle/Resources/config/dashboard.yml
+++ b/src/Diamante/DeskBundle/Resources/config/dashboard.yml
@@ -1,28 +1,28 @@
 oro_dashboard_config:
     widgets:
         tickets_by_priority_widget:
-            label:      Tickets by Priority
+            label:      Tickets By Priority
             route:      diamante_report_widget
             route_parameters: { id: tickets_by_priority_widget }
             description: See the full picture of requests according to their priorities and focus on core issues.
             icon:       bundles/orodashboard/img/quick_launchpad.png
 
         time_of_response_widget:
-            label:      Time of Response
+            label:      Time Of Response
             route:      diamante_report_widget
             route_parameters: { id: time_of_response_widget }
             description: Measure your efficiency by analyzing the average speed of response for new tickets.
             icon:       bundles/orodashboard/img/quick_launchpad.png
 
         tickets_by_channels_widget:
-            label:      Tickets by Channels
+            label:      Tickets By Channels
             route:      diamante_report_widget
             route_parameters: { id: tickets_by_channels_widget }
             description: Find out which channels of ticket submitting are most actively used in your system (emails, web portal, embedded form or via a phone call).
             icon:       bundles/orodashboard/img/quick_launchpad.png
 
         tickets_by_branches_widget:
-            label:      Tickets by Branches
+            label:      Tickets By Branches
             route:      diamante_report_widget
             route_parameters: { id: tickets_by_branches_widget }
             description: See how many tickets are created in each branch for certain periods or daily and use this data to analyze which branches are most actively used for ticket creation.
