DIAM-1316 create new palette

--- a/src/Diamante/DeskBundle/Resources/config/requirejs.yml
+++ b/src/Diamante/DeskBundle/Resources/config/requirejs.yml
@@ -4,3 +4,4 @@ config:
         'd3-tip' : 'bundles/diamantedesk/lib/d3-tip/index.js'
         'diamante/attachments/draganddrop': 'bundles/diamantedesk/js/diam.attachments.js'
         'diamante/ajax.messages': 'bundles/diamantedesk/js/diam.ajax.messages.js'
+        'diamante/palette': 'bundles/diamantedesk/js/palette.js'
