Fix create customer page title

--- a/src/Diamante/DistributionBundle/Resources/config/navigation.yml
+++ b/src/Diamante/DistributionBundle/Resources/config/navigation.yml
@@ -142,7 +142,7 @@ oro_titles:
 
     diamante_report_view: '%%report.label%%'
 
-    diamante_user_create: 'Create user'
+    diamante_user_create: 'Create Customer'
     diamante_user_view:   '%%user.fullName%% - DiamanteDesk User'
     diamante_user_update: '%%user.name%% - Update'
     diamante_user_list:   'Customers Management'
