DWI-8 Creating ticket via widget in admin part - does not work

--- a/src/Diamante/DistributionBundle/Resources/config/whitelist.yml
+++ b/src/Diamante/DistributionBundle/Resources/config/whitelist.yml
@@ -51,6 +51,7 @@ whitelist:
     # Api
     - 'oro_api_get_users'
     - 'nelmio_api_doc_index'
+    - 'oro_api_get_user_filter'
 
     #@TODO:REMOVE THESE ON RELEASE
     - 'oro_email_dashboard_recent_emails'
